--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==7.1.2
+dominate==2.5.2
 Faker==0.9.1
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -8,4 +10,5 @@ mixer==6.1.3
 python-dateutil==2.8.1
 six==1.15.0
 text-unidecode==1.2
+visitor==0.1.3
 Werkzeug==1.0.1
