--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mixer==6.1.3
+mp3-tagger==1.0
+mpeg1audio==0.5.2
+mutagen==1.45.1
 python-dateutil==2.8.1
 six==1.15.0
 text-unidecode==1.2
